--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -29,8 +29,8 @@ exec_always "setxkbmap -layout us,us \
                 "
 
 # autostart
-exec --no-startup-id redshift -l geoclue2 -t 6500K:3500K
-exec --no-startup-id udiskie --no-automount --no-notify --tray
+# exec --no-startup-id redshift -l geoclue2 -t 6500K:3500K
+# exec --no-startup-id udiskie --no-automount --no-notify --tray
 exec --no-startup-id dex -ae i3
 exec_always --no-startup-id xkb-switch --i3
 
