--- a/private_dot_config/nvim/coc-settings.json
+++ b/private_dot_config/nvim/coc-settings.json
@@ -1,5 +1,6 @@
 {
   "explorer.icon.enableNerdfont": true,
+  "explorer.file.reveal.auto": true,
   "explorer.previewAction.onHover": false,
   "python.jediEnabled": false,
   "python.formatting.provider": "black",
