--- a/private_dot_config/fontconfig/fonts.conf
+++ b/private_dot_config/fontconfig/fonts.conf
@@ -1,11 +1,9 @@
-<?xml version="1.0"?>
-<!DOCTYPE fontconfig SYSTEM "fonts.dtd">
+<?xml version='1.0'?>
+<!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
-  <alias>
-    <family>monospace</family>
-    <prefer>
-      <family>Iosevka Term</family> <!-- Your preferred monospace font -->
-      <family>Noto Color Emoji</family> <!-- Your preferred emoji font -->
-     </prefer>
-  </alias>
+    <match target="pattern">
+        <edit name="family" mode="append">
+        <string>Noto Color Emoji</string>
+        </edit>
+    </match>
 </fontconfig>
