--- a/private_dot_config/variety/variety.conf
+++ b/private_dot_config/variety/variety.conf
@@ -2,7 +2,7 @@
 change_on_start = False
 
 # change_enabled = <True or False>
-change_enabled = True
+change_enabled = False
 
 # change_interval = <interval in seconds - not less than 5>
 change_interval = 300
@@ -73,13 +73,13 @@ icon = Light
 # desired_color = <None or rgb like this: 100 150 200>
 # DISCLAIMER: This feature is still experimental
 desired_color_enabled = False
-desired_color = None
+desired_color = 160 160 160
 
 # Minimum size of images to use, as a percentage of the screen resolution
 # min_size_enabled = <True or False>
 # min_size = <Percentage>
-min_size_enabled = False
-min_size = 80
+min_size_enabled = True
+min_size = 100
 
 # Should we use only landscape-oriented images?
 # use_landscape_enabled = <True or False>
@@ -120,8 +120,8 @@ copyto_folder = Default
 # clock_font = <FontName Size>, default is "Serif 70"
 # clock_date_font = <FontName Size>, default is "Serif 30"
 clock_enabled = False
-clock_font = "Serif 70"
-clock_date_font = "Serif 30"
+clock_font = Serif 70
+clock_date_font = Serif 30
 
 # clock_filter = <an ImageMagick filter, read below>
 #
@@ -173,7 +173,7 @@ clock_filter = "-density 100 -font `fc-match -f '%{file[0]}' '%CLOCK_FONT_NAME'`
 # quotes_change_enabled = <True or False>
 # quotes_change_interval = <interval in seconds - not less than 10>, default is 300
 quotes_enabled = False
-quotes_font = "Serif 30"
+quotes_font = Serif 30
 quotes_text_color = 255 255 255
 quotes_bg_color = 80 80 80
 quotes_bg_opacity = 55
@@ -183,8 +183,8 @@ quotes_hpos = 100
 quotes_vpos = 40
 quotes_max_length = 250
 quotes_disabled_sources = Urban Dictionary
-quotes_tags =
-quotes_authors =
+quotes_tags = ""
+quotes_authors = ""
 quotes_change_enabled = False
 quotes_change_interval = 300
 quotes_favorites_file = ~/.config/variety/favorite_quotes.txt
@@ -195,11 +195,11 @@ slideshow_favorites_enabled = True
 slideshow_sources_enabled = True
 slideshow_downloads_enabled = False
 slideshow_custom_enabled = False
-slideshow_custom_folder = Default
+slideshow_custom_folder = ~/Pictures
 slideshow_sort_order = Random
 slideshow_monitor = All
 slideshow_mode = Fullscreen
-slideshow_seconds = 6
+slideshow_seconds = 6.0
 slideshow_fade = 0.4
 slideshow_zoom = 0.2
 slideshow_pan = 0.05
@@ -216,8 +216,9 @@ src3 = False|folder|/usr/share/backgrounds
 src4 = False|bing|Bing Photo of the Day
 src5 = True|unsplash|High-resolution photos from Unsplash.com
 src6 = True|apod|NASA's Astronomy Picture of the Day
-src8 = False|earthview|Google Earth View Wallpapers
-src9 = True|unsplash-search|https://unsplash.com/collections/138471/in-the-wild
+src7 = False|earthview|Google Earth View Wallpapers
+src8 = True|unsplash-search|https://unsplash.com/collections/138471/in-the-wild
+src9 = False|natgeo|National Geographic's photo of the day
 src10 = True|desktoppr|Random wallpapers from Desktoppr.co
 src11 = True|chromeos|Chrome OS Wallpapers
 
