--- a/private_dot_config/fontconfig/fonts.conf
+++ b/private_dot_config/fontconfig/fonts.conf
@@ -1,9 +1,17 @@
 <?xml version='1.0'?>
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
-    <match target="pattern">
-        <edit name="family" mode="append">
-        <string>Noto Color Emoji</string>
-        </edit>
-    </match>
+  <match target="pattern">
+    <edit name="family" mode="append">
+      <string>Noto Color Emoji</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>monospace</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Iosevka</string>
+    </edit>
+  </match>
 </fontconfig>
