--- a/private_dot_config/alacritty/colors.yml
+++ b/private_dot_config/alacritty/colors.yml
@@ -1,5 +1,5 @@
 colors:
-  # COLORSCHEME: base16-classic-dark-256.yml
+  # COLORSCHEME: base16/base16-classic-dark-256.yml
   # Default colors
   primary:
     background: '0x151515'
