--- a/private_dot_config/variety/variety.conf
+++ b/private_dot_config/variety/variety.conf
@@ -203,6 +203,8 @@ slideshow_seconds = 6.0
 slideshow_fade = 0.4
 slideshow_zoom = 0.2
 slideshow_pan = 0.05
+wallpaper_auto_rotate = True
+wallpaper_display_mode = os
 
 # List of sources
 # Each source is srcX = <enabled or not|source type - one of image, folder, flickr, wallhaven, etc.|location>
@@ -215,7 +217,7 @@ src2 = True|fetched|The Fetched folder
 src3 = False|folder|/usr/share/backgrounds
 src4 = False|bing|Bing Photo of the Day
 src5 = True|unsplash|High-resolution photos from Unsplash.com
-src6 = True|apod|NASA's Astronomy Picture of the Day
+src6 = False|apod|NASA's Astronomy Picture of the Day
 src7 = False|earthview|Google Earth View Wallpapers
 src8 = True|unsplash-search|https://unsplash.com/collections/138471/in-the-wild
 src9 = False|natgeo|National Geographic's photo of the day
@@ -228,8 +230,8 @@ src11 = True|chromeos|Chrome OS Wallpapers
 [filters]
 filter1 = False|Keep original|
 filter2 = False|Grayscale|-type Grayscale
-filter3 = False|Heavy blur|-blur 120x40
-filter4 = False|Soft blur|-blur 20x7
+filter3 = False|Heavy blur|-scale 20% -blur 0x10 -resize 500%
+filter4 = False|Soft blur|-scale 20% -blur 0x2 -resize 500%
 filter5 = False|Oil painting|-paint 8
 filter6 = False|Pointilism|-spread 10 -noise 3
 filter7 = False|Pixellate|-scale 3% -scale 3333%
