--- a/src/private_dot_config/starship.toml
+++ b/src/private_dot_config/starship.toml
@@ -39,6 +39,9 @@ symbol = " "
 [elm]
 symbol = " "
 
+[gcloud]
+format = 'on [$symbol$account(@$domain)(\($project\))]($style) '
+
 [git_branch]
 symbol = " "
 
