--- a/src/private_dot_config/polybar/config.ini
+++ b/src/private_dot_config/polybar/config.ini
@@ -22,7 +22,7 @@ line-size = 3pt
 border-size = 4pt
 border-color = #00000000
 
-padding-left = 0
+padding-left = 1
 padding-right = 1
 
 module-margin = 1
@@ -40,7 +40,7 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-tray-position = right
+tray-position = center
 tray-maxsize = 24
 
 
