--- a/src/private_dot_config/polybar/config.ini
+++ b/src/private_dot_config/polybar/config.ini
@@ -30,38 +30,47 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = monospace;2
+font-0 = monospace:size=12;2
+font-1 = "Noto Color Emoji:scale=8;2"
+font-2 = Symbola:size=14;2
 
-modules-left = xworkspaces xwindow
+modules-left = i3 xwindow
 modules-right = backlight filesystem pulseaudio xkeyboard memory cpu wlan eth battery date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+scroll-up = "#i3.prev"
+scroll-down = "#i3.next"
 
 enable-ipc = true
 
 tray-position = center
 tray-maxsize = 24
 
+[module/i3]
+type = internal/i3
 
-[module/xworkspaces]
-type = internal/xworkspaces
+label-mode = %mode%
+label-mode-padding = 2
+label-mode-background = ${colors.background-alt}
+label-mode-underline= ${colors.alert}
 
-label-active = %name%
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
-label-active-padding = 1
+label-focused = %name%
+label-focused-background = ${colors.background-alt}
+label-focused-underline= ${colors.primary}
+label-focused-padding = 1
 
-label-occupied = %name%
-label-occupied-padding = 1
+label-unfocused = %name%
+label-unfocused-padding = 1
 
 label-urgent = %name%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
 
-label-empty = %name%
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
+label-visible = %name%
+label-visible-foreground = ${colors.disabled}
+label-visible-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
