Externalize AstroNvim config

--- a/src/.chezmoiexternal.toml
+++ b/src/.chezmoiexternal.toml
@@ -1,4 +1,10 @@
-# [".config/nvim-profiles/chad/nvim"]
-# type = "git-repo"
-# url = "https://github.com/NvChad/NvChad"
-# refreshPeriod = "168h"
+[".config/nvim-profiles/chad/nvim"]
+type = "git-repo"
+url = "https://github.com/NvChad/NvChad"
+refreshPeriod = "168h"
+
+[".config/nvim-profiles/astro/nvim"]
+type = "git-repo"
+url = "https://github.com/AstroNvim/AstroNvim"
+refreshPeriod = "168h"
+
