--- a/src/.chezmoiexternal.toml
+++ b/src/.chezmoiexternal.toml
@@ -8,3 +8,12 @@
 # url = "https://github.com/AstroNvim/AstroNvim"
 # refreshPeriod = "168h"
 
+[".config/alacritty/colors/base16"]
+type = "git-repo"
+url = "https://github.com/aarowill/base16-alacritty"
+refreshPeriod = "168h"
+
+[".config/alacritty/colors/misc"]
+type = "git-repo"
+url = "https://github.com/alacritty/alacritty-theme"
+refreshPeriod = "168h"
