--- a/src/private_dot_config/polybar/config.ini
+++ b/src/private_dot_config/polybar/config.ini
@@ -10,7 +10,7 @@ disabled = #707880
 [bar/main]
 width = 100%
 height = 24pt
-radius = 6
+; radius = 6
 
 ; dpi = 96
 
@@ -19,8 +19,8 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 4pt
-border-color = #00000000
+border-size = 2pt
+border-color = ${colors.background}
 
 padding-left = 1
 padding-right = 1
@@ -45,7 +45,7 @@ scroll-down = "#i3.next"
 
 enable-ipc = true
 
-tray-position = center
+tray-position = right
 tray-maxsize = 24
 
 [module/i3]
