--- a/src/private_dot_config/polybar/config.ini
+++ b/src/private_dot_config/polybar/config.ini
@@ -35,7 +35,7 @@ font-1 = "Noto Color Emoji:scale=8;2"
 font-2 = Symbola:size=14;2
 
 modules-left = i3 xwindow
-modules-right = backlight filesystem pulseaudio xkeyboard memory cpu wlan eth battery date
+modules-right = backlight filesystem pulseaudio xkeyboard memory cpu ping wlan eth battery date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -281,6 +281,16 @@ date-alt = %Y-%m-%d %H:%M:%S
 
 label = %date%
 label-foreground = ${colors.primary}
+
+[module/ping]
+type = custom/script
+exec = "ping -c1 -4 -n 1.1.1.1 | rg '^64.*=([0-9.]+) ms' --replace '$1'"
+
+format = <label>
+label = " %output:5%ms"
+
+format-fail = <label-fail>
+label-fail = " OFFLINE"
 
 [settings]
 screenchange-reload = true
