Update src/.config/alacritty/alacritty.yml Update src/.config/alacritty/colors.yml Update src/.config/nvim-profiles/chad/nvim/lua/custom/chadrc.lua Update src/.config/nvim-profiles/chad/nvim/lua/custom/plugins/lsp.lua

--- a/src/private_dot_config/alacritty/alacritty.yml
+++ b/src/private_dot_config/alacritty/alacritty.yml
@@ -9,7 +9,7 @@
 # All imports must either be absolute paths starting with `/`, or paths relative
 # to the user's home directory starting with `~/`.
 import:
- - ~/.config/alacritty/colors.yml
+  - ~/.config/alacritty/colors.yml
 
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
@@ -882,3 +882,48 @@ font:
 
   # Highlight window damage information.
   #highlight_damage: false
+colors:
+  # COLORSCHEME: base16/base16-ayu-light-256.yml
+  # Default colors
+  primary:
+    # hard contrast: background = '0xf9f5d7'
+    background: '0xfafafa'
+    foreground: '0x5c6773'
+
+  # Colors the cursor will use if `custom_cursor_colors` is true
+  cursor:
+    text: '0xfafafa'
+    cursor: '0x5c6773'
+
+  # Normal colors
+  normal:
+    black: '0xfafafa'
+    red: '0xf07178'
+    green: '0x86b300'
+    yellow: '0xf2ae49'
+    blue: '0x36a3d9'
+    magenta: '0xa37acc'
+    cyan: '0x4cbf99'
+    white: '0x5c6773'
+
+  # Bright colors
+  bright:
+    black: '0xabb0b6'
+    red: '0xf07178'
+    green: '0x86b300'
+    yellow: '0xf2ae49'
+    blue: '0x36a3d9'
+    magenta: '0xa37acc'
+    cyan: '0x4cbf99'
+    white: '0x1a1f29'
+
+  indexed_colors:
+    - {index: 16, color: '0xfa8d3e'}
+    - {index: 17, color: '0xe6ba7e'}
+    - {index: 18, color: '0xf3f4f5'}
+    - {index: 19, color: '0xf8f9fa'}
+    - {index: 20, color: '0x828c99'}
+    - {index: 21, color: '0x242936'}
+  selection:
+    background: '#f2f2f2'
+    text: '#403f53'
