--- a/src/private_dot_config/variety/variety.conf
+++ b/src/private_dot_config/variety/variety.conf
@@ -220,9 +220,11 @@ src5 = True|unsplash|High-resolution photos from Unsplash.com
 src6 = False|apod|NASA's Astronomy Picture of the Day
 src7 = False|earthview|Google Earth View Wallpapers
 src8 = True|unsplash-search|https://unsplash.com/collections/138471/in-the-wild
-src9 = True|natgeo|National Geographic's photo of the day
-src10 = True|desktoppr|Random wallpapers from Desktoppr.co
-src11 = True|chromeos|Chrome OS Wallpapers
+src9 = False|natgeo|National Geographic's photo of the day
+src10 = True|unsplash-search|https://unsplash.com/t/wallpapers
+src11 = True|unsplash-search|https://unsplash.com/t/textures-patterns
+src12 = True|desktoppr|Random wallpapers from Desktoppr.co
+src13 = True|chromeos|Chrome OS Wallpapers
 
 # Image filters to apply randomly to every wallpaper (ImageMagick is used for this)
 # Each filter is filterX = <enabled or not|filter name|arguments to pass to ImageMagick when calling convert>
