--- a/src/.chezmoiexternal.toml
+++ b/src/.chezmoiexternal.toml
@@ -23,3 +23,8 @@ url = "https://github.com/alacritty/alacritty-theme/archive/refs/heads/master.zi
 include = ['*/themes/*']
 stripComponents = 2
 refreshPeriod = "168h"
+
+[".config/tmux/tmux.conf"]
+type = "file"
+url = "https://raw.githubusercontent.com/gpakosz/.tmux/master/.tmux.conf"
+refreshPeriod = "168h"
