--- a/src/private_dot_config/starship.toml
+++ b/src/private_dot_config/starship.toml
@@ -1,88 +1,32 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 add_newline = true
 
-format = """$all"""
-
-right_format = """${custom.docker_host}$kubernetes"""
+format = """
+$all\
+$fill\
+${custom.docker_host}\
+$kubernetes\
+$line_break\
+$jobs\
+$battery\
+$time\
+$status\
+$container\
+$os\
+$shell\
+$character"""
 
 [sudo]
 disabled = false
 
 [kubernetes]
 disabled = false
+# Removed `in` in the end, because it's placed in the end of the line
 format = '[$symbol$context( \($namespace\))]($style)'
 
-[aws]
-symbol = "  "
-
-[buf]
-symbol = " "
-
-[c]
-symbol = " "
-
-[conda]
-symbol = " "
-
-[dart]
-symbol = " "
-
-[directory]
-read_only = " "
-
-[docker_context]
-symbol = " "
-
-[elixir]
-symbol = " "
-
-[elm]
-symbol = " "
-
 [gcloud]
+# Add project name
 format = 'on [$symbol$account(@$domain)(\($project\))]($style) '
-
-[git_branch]
-symbol = " "
-
-[golang]
-symbol = " "
-
-[haskell]
-symbol = " "
-
-[hg_branch]
-symbol = " "
-
-[java]
-symbol = " "
-
-[julia]
-symbol = " "
-
-[memory_usage]
-symbol = " "
-
-[nim]
-symbol = " "
-
-[nix_shell]
-symbol = " "
-
-[nodejs]
-symbol = " "
-
-[package]
-symbol = " "
-
-[python]
-symbol = " "
-
-[spack]
-symbol = "🅢 "
-
-[rust]
-symbol = " "
 
 [openstack]
 # Removed $cloud, because it's always the same as $project
