--- a/src/private_dot_config/polybar/config.ini
+++ b/src/private_dot_config/polybar/config.ini
@@ -35,7 +35,7 @@ font-1 = "Noto Color Emoji:scale=8;2"
 font-2 = Symbola:size=14;2
 
 modules-left = i3 xwindow
-modules-right = backlight filesystem pulseaudio xkeyboard memory cpu ping wlan eth battery date
+modules-right = backlight filesystem pulseaudio xkeyboard memory cpu cpufreq ping wlan eth battery date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -254,6 +254,11 @@ interval = 2
 format-prefix = "CPU "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
+
+[module/cpufreq]
+type = custom/script
+exec = /usr/share/polybar/scripts/system-cpu-frequency.sh
+interval = 2
 
 [network-base]
 type = internal/network
