--- a/src/private_dot_config/fontconfig/fonts.conf
+++ b/src/private_dot_config/fontconfig/fonts.conf
@@ -11,7 +11,7 @@
       <string>monospace</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>Iosevka Nerd Font Mono</string>
+      <string>Iosevka NFM</string>
     </edit>
   </match>
 </fontconfig>
