--- a/src/private_dot_config/alacritty/alacritty.yml
+++ b/src/private_dot_config/alacritty/alacritty.yml
@@ -117,7 +117,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: IosevkaTerm Nerd Font Mono
+    family: IosevkaTerm NFM
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
