--- a/src/private_dot_config/polybar/config.ini
+++ b/src/private_dot_config/polybar/config.ini
@@ -233,8 +233,12 @@ label-muted-foreground = ${colors.disabled}
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-label-layout = %layout%
+label-layout = %icon%
 label-layout-foreground = ${colors.primary}
+
+layout-icon-default = FF
+layout-icon-0 = us;US;eng
+layout-icon-1 = us;US, phonetic;rus
 
 label-indicator-padding = 2
 label-indicator-margin = 1
